WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281423
Fix extraction order in B3LowerInt64.cpp
https://bugs.webkit.org/show_bug.cgi?id=281423
Summary
Fix extraction order in B3LowerInt64.cpp
Angelos Oikonomopoulos
Reported
2024-10-14 05:23:34 PDT
https://commits.webkit.org/284674@main
flipped the order to lo/hi but missed this site.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-10-14 05:27:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35146
EWS
Comment 2
2024-10-15 23:41:58 PDT
Committed
285247@main
(91065bf77e9b): <
https://commits.webkit.org/285247@main
> Reviewed commits have been landed. Closing PR #35146 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-15 23:42:15 PDT
<
rdar://problem/138018374
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug