Fix extraction order in B3LowerInt64.cpp https://bugs.webkit.org/show_bug.cgi?id=281423

Reviewed by Yusuke Suzuki.

https://commits.webkit.org/284674@main flipped the order to lo/hi but
missed this site.

* Source/JavaScriptCore/b3/B3LowerInt64.cpp:

Canonical link: https://commits.webkit.org/285247@main